# project_silence

./: Anchor.toml  Arcium.toml  Cargo.toml  README.md  package-lock.json  package.json
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs
programs/project_silence/: Cargo.toml
programs/project_silence/src/: lib.rs
silence-near-contracts/: README.md  build.sh
silence-near-contracts/near-ai-inference/: Cargo.toml
silence-near-contracts/near-ai-inference/src/: lib.rs
silence-near-contracts/near-ai-model-registry/: Cargo.toml
silence-near-contracts/near-ai-model-registry/src/: lib.rs
silence-near-contracts/near-philanthropy-agent/: Cargo.toml
silence-near-contracts/near-philanthropy-agent/src/: lib.rs
silence-near-contracts/scripts/: create-and-deploy.mjs  create-testnet-account.mjs
silence-near-contracts/silence-bridge/: Cargo.toml  DEPLOY.md  deploy-testnet.sh  deploy.sh  docker-build.sh
silence-near-contracts/silence-bridge/src/: lib.rs
tests/: project_silence.ts
