[workspace]
members = ["programs/*", "encrypted-ixs"]
exclude = [
    "silence-near-contracts/near-ai-model-registry",
    "silence-near-contracts/near-ai-inference",
    "silence-near-contracts/near-philanthropy-agent",
    "silence-near-contracts/silence-bridge"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
proc-macro2 = { git = 'https://github.com/arcium-hq/proc-macro2.git' }
