[package]
name = "project_silence"
version = "0.1.0"
description = "Project Silence - Privacy-preserving AI & Cross-chain Bridge on Solana with Arcium"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "project_silence"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "arcium-anchor/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
arcium-client = { version = "0.4.0", default-features = false }
arcium-macros = "0.4.0"
arcium-anchor = "0.4.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
